added neovim configurations

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,21 +1,38 @@
-cursor_shape     beam
-macos_option_as_alt left
-enable_audio_bell no
-scrollback_lines 10000
-confirm_os_window_close 0
-shell            /bin/zsh
-
-
-# BEGIN_KITTY_FONTS
-font_family      family='CaskaydiaMono Nerd Font Mono' postscript_name=CaskaydiaMonoNFM-Regular
-font_size        14.0
+font_family      family="Monaco"
+font_size 16
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
-# END_KITTY_FONTS
+ 
+scrollback_lines 10000
 
-map alt+h send_text all \x1bh
-map alt+j send_text all \x1bj
-map alt+k send_text all \x1bk
-map alt+l send_text all \x1bl
+cursor_shape     beam
+enable_audio_bell no
+shell            /bin/zsh
 
+confirm_os_window_close 0
+macos_option_as_alt left
+
+map ctrl+h send_text all \x1bh
+map ctrl+j send_text all \x1bj
+map ctrl+k send_text all \x1bk
+map ctrl+l send_text all \x1bl
+
+	# Catppuccin Mocha base background
+	background            #1e1e2e
+window_padding_width  0
+window_margin_width   0
+hide_window_decorations yes
+macos_show_window_title_in none
+
+text_composition_strategy 1.0 0
+macos_thicken_font 0.8
+
+modify_font cell_height 115%
+
+map alt+r load_config_file
+
+input_delay 0
+repaint_delay 2
+sync_to_monitor no
+wayland_enable_ime no
