--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,7 @@
+unbind C-b                 # remove default prefix (Ctrl+b)
+set -g prefix C-a          # new prefix: Ctrl+a
+bind C-a send-prefix       # send Ctrl+a through to nested tmux if needed
+
 set -g history-limit 10000
 
 bind | split-window -h
@@ -12,3 +16,5 @@ bind -n M-h select-pane -L
 bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
+
+bind-key -n C-p display-popup -E "project-session"   # Option+P (Meta-p) project switcher
