switched to ghostty terminal

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,6 +3,15 @@ set -g prefix C-a          # new prefix: Ctrl+a
 bind C-a send-prefix       # send Ctrl+a through to nested tmux if needed
 
 set -g history-limit 10000
+set -g mouse on
+
+# Start windows and panes at 1 instead of 0
+set -g base-index 1
+setw -g pane-base-index 1
+
+# Show full session name in status bar (increase width)
+set -g status-left-length 50
+set -g status-left '[#S] '
 
 bind | split-window -h
 bind - split-window -v
@@ -11,6 +20,20 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+bind Space last-window
+
+# Window navigation with numbers (prefix + 0-9)
+bind 0 select-window -t :0
+bind 1 select-window -t :1
+bind 2 select-window -t :2
+bind 3 select-window -t :3
+bind 4 select-window -t :4
+bind 5 select-window -t :5
+bind 6 select-window -t :6
+bind 7 select-window -t :7
+bind 8 select-window -t :8
+bind 9 select-window -t :9
 
 bind -n M-h select-pane -L
 bind -n M-j select-pane -D
