--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,14 +5,34 @@ bind C-a send-prefix       # send Ctrl+a through to nested tmux if needed
 set -g history-limit 10000
 set -g mouse on
 
+# # Allow applications (like neovim) to change cursor shape
+# set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
+# set -g default-terminal "xterm-256color"
+# set -as terminal-features ',xterm-256color:RGB'
+#
 # Start windows and panes at 1 instead of 0
 set -g base-index 1
 setw -g pane-base-index 1
 
 # Show full session name in status bar (increase width)
 set -g status-left-length 50
-set -g status-left '[#S] '
-
+#
+# # Rosé Pine-inspired status bar colors
+# # Palette reference: https://rosepinetheme.com/palette
+# set -g status-style "bg=#191724,fg=#e0def4"
+#
+# # Left side: session name with accent background
+# set -g status-left '#[fg=#191724,bg=#31748f,bold] #S #[fg=#31748f,bg=#191724,nobold] '
+#
+# # Window titles
+# set -g window-status-style "bg=#191724,fg=#6e6a86"
+# set -g window-status-current-style "bg=#26233a,fg=#ebbcba,bold"
+# set -g window-status-format ' #I:#W '
+# set -g window-status-current-format ' #I:#W '
+#
+# # Right side: time/date in subtle colors
+# set -g status-right '#[fg=#908caa,bg=#191724] %Y-%m-%d %H:%M '
+#
 bind | split-window -h
 bind - split-window -v
 
